# deep-research

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENT.md  AGENTS.md  CLAUDE.md  ISSUES.md  README.md  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-agent.mjs  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml
.pnpm-store/v3/files/00/: cf5a43f20fad6ffa10d2d08370066382b53764c665d4797b882efcc9a6476c51dcb975f9d89bfa7a2893dda0e135773d75727b2c5d5b0b5a0808942f484cc4-index.json
apps/api/: package.json  pyproject.toml
apps/api/data/: jobs.json
apps/api/src/: api.integration.test.ts  config.ts  frontend.ts  index.ts  instrumentation.ts  job-store.test.ts  job-store.ts  logger.ts  manus-webhook-verify.ts  middleware.ts  schemas.ts  trace.ts
apps/api/src/api/: config.py  deps.py  main.py
apps/api/src/api/routes/: research.py  webhooks.py
apps/api/src/dashboard/: index.html
apps/api/src/job-session-store/: file-store.test.ts  file-store.ts  index.ts  memory-store.ts  types.ts
docs/: ARCHITECTURE.md  BEST_ARCHITECTURE.md  BLUEPRINT.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  USER_STORIES.md  USER_STORIES_PER_EPIC.md  agentic-deep-research-spec.md
docs/diagrams/: README.md  architecture.mmd  depth-modes.mmd  research-pipeline.mmd
docs/skills/: cloud-agent-starter.md
test/e2e/: README.md  research.e2e.mjs
(+168 files in other folders)
