[project]
name = "deep-research"
version = "0.1.0"
description = "Deep Research Agent — Manus + Firecrawl + Tavily + Perplexity"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/orchestrator",
    "packages/tools/manus",
    "packages/tools/perplexity",
    "packages/tools/tavily",
    "packages/tools/firecrawl",
    "packages/fusion",
    "packages/types",
]

[tool.uv.sources]
dr-types = { workspace = true }
dr-orchestrator = { workspace = true }
dr-tools-manus = { workspace = true }
dr-tools-perplexity = { workspace = true }
dr-tools-tavily = { workspace = true }
dr-tools-firecrawl = { workspace = true }
dr-fusion = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
