[project]
name = "dr-api"
version = "0.1.0"
description = "Deep Research Agent — FastAPI server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "dr-types",
    "dr-orchestrator",
    "dr-fusion",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
